--- a/front.html
+++ b/front.html
@@ -1,1 +1,13 @@
-<h1> front </h1>
+
+
+<html>
+<head>
+Login page
+</head>
+<body>
+uname: <input type="text" ><br>
+passwd:<input type="password"><br>
+<button onclick="" > login </button>
+</body>
+
+</html>
